# sklearn-morpho

./: .SRCINFO  .gitignore  .gitlab-ci.yml  PKGBUILD  README-PyPI.md  README.md  check_todos.sh  comparison.json  comparison_data_dccp.json  pkgbuild_helper.sh  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  code_quality.yml  coverage.yml  docs.yml  linter.yml  pypi-publish.yml  pypi_publish.yml  test_os.yml  tests.yml  testsuite.yml  todo.yml
.qbuild/scripts/: coverage  main  tests
MREs/: DEP.ipynb  l-DEP.ipynb  r-DEP.ipynb  simple_perceptron.ipynb  train_multiclass.ipynb  train_two_moons.ipynb
MREs/.ipynb_checkpoints/: train_two_moons-checkpoint.ipynb
src/sklearn_morpho/: __init__.py  __main__.py
src/sklearn_morpho/binary/: __init__.py  classifier.py  perceptron.py
src/sklearn_morpho/binary/training/: dccp.py
src/sklearn_morpho/classifiers/: __init__.py  dep.py  ldep.py  rdep.py  simple_perceptron.py  temp_binary.py
src/sklearn_morpho/datasets/: gaussian.py  gaussian_orthant.py  wdbc.py
src/sklearn_morpho/dccp/: __init__.py  dccp_ldep.py  dccp_rdep.py  dccp_simple_perceptron.py  dccp_wrapper.py
src/sklearn_morpho/inversion/: __init__.py  inversion_base.py  inversion_centroid.py  inversion_none.py
src/sklearn_morpho/perceptron/: __init__.py  morpho_perceptron.py
src/sklearn_morpho/stopping/: __init__.py  stopping_base.py  stopping_cost.py  stopping_early.py  stopping_epoch.py  stopping_holdout.py  stopping_iter.py  stopping_train_stop.py
src/sklearn_morpho/tests/: moons_test.py  scikit_test.py  sklearn_test.py  train_test.py
src/sklearn_morpho/training/: __init__.py  dccp.py  dccp_dep.py  dccp_ldep.py  dccp_rdep.py  dccp_simple_perceptron.py  dccp_wrapper.py  gradient.py
src/sklearn_morpho/utils/: __init__.py  perceptron_kind.py
src/sklearn_morpho/weighting/: __init__.py  dist_weighted.py  not_weighted.py  weighting_base.py  weighting_dist.py  weighting_none.py
testing/: compare_estimators.py  compare_estimators_multiprocess.py  compare_estimators_show.py  display_boundary.py
tests/: scikit_test.py  train_test.py
tests/integration/: sklearn_test.py
tests/inversion/: centroid_test.py  no_test.py
tests/stopping/: cost_test.py  early_test.py  epoch_test.py  train_stop_test.py
tests/training/: friendly_dataset.py  test_dccp_wrapper.py  test_dep.py  test_ldep.py  test_rdep.py  test_simple_perceptron.py
tests/weighting/: dist_test.py  none_test.py
