[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sklearn-morpho"
version = "0.2.1"
dependencies = [
    "cvxpy",
    "numpy",
    "scikit-learn",
]

[project.optional-dependencies]
dccp = [
    "dccp",
    "pytest",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.envs.default]
python = "3.13"
path = ".venv" # for LSPs
dependencies = [
    "dccp",
    "jupyterlab", # for coding the MREs
    "matplotlib", # for files in testing
    "pandas", # for scikit-learn's check_estimator and openml datasets
    "pyqt6", # for matplotlib display on some devices
    "pytest",
    "pytest-cov>=7.1.0,<8.0.0",
    "ruff>=0.15.0,<1.0.0", # linter
]
