# General

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Production

[project]
name = "sklearn-morpho"
description = "Scikit-learn classifiers toolbox for morphological perceptrons"
version = "0.2.3"
requires-python = ">=3.11"
dependencies = [
    "cvxpy>=1.9.0,<2.0.0",
    "numpy>=2.0.0",
    "scikit-learn>=1.8.0,<2.0.0",
]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
readme = "README-PyPI.md"

[project.optional-dependencies]
dccp = [
    "dccp>=1.1.1,<2.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

# Dev

[tool.hatch.envs.default]
python = "3.13"
path = ".venv" # for LSPs
dependencies = [
    "dccp>=1.1.1,<2.0.0",
    "jupyterlab>=4.5.0,<5.0.0", # for coding the MREs
    "matplotlib>=3.10.0,<4.0.0", # for files in testing
    "pandas>=3.0.0", # for scikit-learn's check_estimator and openml datasets
    "pyqt6>=6.11.0,<7.0.0", # for matplotlib display on some devices
    "pytest>=9.0.0,<10.0.0",
    "pytest-cov>=7.1.0,<8.0.0",
    "ruff>=0.15.0,<1.0.0", # linter
]

[tool.hatch.envs.default.env-vars]
SCIPY_ARRAY_API = "1" # prevent skip warnings in check_estimator

# Matrix test

[tool.hatch.envs.test]
template = "test" # break inheritance from default to ignore .venv
features = [
    "dccp",
]
dependencies = [
    "pandas>=3.0.0",
    "pytest>=9.0.0,<10.0.0",
    "pytest-cov>=7.1.0,<8.0.0",
]

[tool.hatch.envs.test.env-vars]
SCIPY_ARRAY_API = "1"

[[tool.hatch.envs.test.matrix]]
python = ["3.11", "3.12", "3.13", "3.14"]

# Ruff

[tool.ruff]
indent-width = 4
line-length = 80

[tool.ruff.lint]
select = ["E", "I"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
